--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-radsecproxy (1.9.0+git20210811+acctfix+sdinetI3) buster; urgency=medium
+radsecproxy (1.9.0+git20210811+acctfix+sdinetJ3) bullseye; urgency=medium
 
   * Non-maintainer upload.
   * New git snapshot plus accounting packet Message-Authenticator fix
   * Changed source format to 3.0 (native)
 
- -- Sven-Haegar Koch <haegar@sdinet.de>  Mon, 30 Aug 2021 17:00:50 +0200
+ -- Sven-Haegar Koch <haegar@sdinet.de>  Mon, 30 Aug 2021 17:02:42 +0200
 
 radsecproxy (1.9.0-1~exp1~sdinetI1) buster-backports; urgency=medium
 
